<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_item"
        android:title="@string/icon_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always">

    </item>


    <item
        android:id="@+id/delete_item"
        android:title="@string/icon_delete"
        android:icon="@drawable/ic_trash"
        app:showAsAction="always">

    </item>


    <item
        android:id="@+id/sort_by"
        android:title="@string/icon_sort_by"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/game_saved_date"
                android:orderInCategory="100"
                android:title="@string/icon_most_recent">
            </item>
            <item
                android:id="@+id/game_saved_score"
                android:orderInCategory="100"
                android:title="@string/icon_high_score">
            </item>
            <item
                android:id="@+id/game_saved_time"
                android:orderInCategory="100"
                android:title="@string/icon_longer_played">
            </item>
        </menu>

    </item>


</menu>