<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item android:id="@+id/rate_game"
            android:title="@string/drawer_menu_rate_game"
            android:icon="@drawable/ic_rate"/>

        <item android:id="@+id/ranking_game"
            android:title="@string/drawer_menu_ranking_game"
            android:icon="@drawable/ic_ranking"/>

        <item android:id="@+id/achievement_game"
            android:title="@string/drawer_menu_achievement_game"
            android:icon="@drawable/ic_achievement"/>

        <item android:id="@+id/help_game"
            android:title="@string/drawer_menu_help_game"
            android:icon="@drawable/ic_help"/>
    </group>


    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/toggle_sound"
                android:title="@string/drawer_menu_toggle_sound"
                />

        </menu>
    </item>

</menu>
