<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <org.freelectron.leobel.winline98.BoardView
            android:id="@+id/board_game"
            android:layout_width="wrap_content"
            android:layout_height="240dp">

        </org.freelectron.leobel.winline98.BoardView>

    </RelativeLayout>



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/left_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/red"
        android:weightSum="1"
        android:clickable="true"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.50">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/empty"
                android:text="@string/delete_game"/>

            <Button
                android:id="@+id/delete_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="50dp"
                android:text="@string/dialog_yes"/>

            <Button
                android:id="@+id/cancel_delete_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:text="@string/dialog_cancel"/>
        </RelativeLayout>



    <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:backgroundTint="@color/empty"-->
            <!--app:srcCompat="@drawable/ic_delete_game"/>-->

    </LinearLayout>



</RelativeLayout>
